# pipyt

./: .gitignore  README.md  pyproject.toml
pipyt/: __main__.py
